--- a/backend-zapp/.env.example
+++ b/backend-zapp/.env.example
@@ -12,3 +12,36 @@ MERCHANT_JWT_SECRET=changeme-merchant-secret
 # Fiat price for 1 ZEC (e.g. 50 means 1 ZEC = 50 units of fiat)
 # In production you should back this with a proper price oracle.
 ZEC_FIAT_RATE=50
+
+# ============================================================================
+# NEAR Environment (Ref Finance / indexer)
+# ============================================================================
+
+# Network (testnet or mainnet)
+NEAR_ENV=testnet
+
+# ============================================================================
+# Zcash Node RPC Connection
+# Connects directly to your Zcash node - no external API key needed!
+# ============================================================================
+
+# Zcash node RPC URL (default: http://127.0.0.1:8232)
+# For testnet, typically use port 18232
+ZCASH_RPC_URL=http://127.0.0.1:8232
+
+# RPC authentication (if your node requires it)
+# These match the rpcuser/rpcpassword in your zcash.conf
+ZCASH_RPC_USER=
+ZCASH_RPC_PASSWORD=
+
+# ============================================================================
+# NEAR Configuration
+# ============================================================================
+
+# Optional: Custom credentials path (default: ~/.near-credentials)
+NEAR_CREDENTIALS_PATH=~/.near-credentials
+
+# NOTE: No BRIDGE_NEAR_ACCOUNT needed!
+# Each user gets their own NEAR account automatically generated from their Zcash address.
+# Accounts are created via `near-cli-rs` and funded via testnet faucet.
+# Install near-cli: npm install -g near-cli-rs@latest
