feat: testnet bridge and lp

--- a/backend-zapp/.env.example
+++ b/backend-zapp/.env.example
@@ -45,3 +45,15 @@ NEAR_CREDENTIALS_PATH=~/.near-credentials
 # Each user gets their own NEAR account automatically generated from their Zcash address.
 # Accounts are created via `near-cli-rs` and funded via testnet faucet.
 # Install near-cli: npm install -g near-cli-rs@latest
+
+# ============================================================================
+# Omni Bridge SDK Configuration (for real Zcash<->NEAR bridging)
+# ============================================================================
+
+# REQUIRED for real bridging: Zcash API key (from Tatum or similar provider)
+# Without this, the system falls back to simulated bridging
+ZCASH_API_KEY=
+
+# Bridge mode: 'real' for actual bridging, 'simulated' for testing
+# Default: simulated (if ZCASH_API_KEY is not set)
+BRIDGE_MODE=real
