--- a/admin-zapp/package.json
+++ b/admin-zapp/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.454.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.6",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
