--- a/backend-zapp/.env.example
+++ b/backend-zapp/.env.example
@@ -6,8 +6,8 @@ MONGODB_URI=mongodb://localhost:00000
 # Admin API key used by the Zapp admin dashboard
 ZAP_ADMIN_API_KEY=changeme-admin-key
 
-# Secret used for signing merchant JWTs (keep this safe in production)
-MERCHANT_JWT_SECRET=changeme-merchant-secret
+# Secret used for signing facilitator JWTs (keep this safe in production)
+MERCHANT_JWT_SECRET=changeme-facilitator-secret
 
 # Fiat price for 1 ZEC (e.g. 50 means 1 ZEC = 50 units of fiat)
 # In production you should back this with a proper price oracle.
