--- a/backend-zapp/.env.example
+++ b/backend-zapp/.env.example
@@ -13,6 +13,10 @@ MERCHANT_JWT_SECRET=changeme-facilitator-secret
 # In production you should back this with a proper price oracle.
 ZEC_FIAT_RATE=50
 
+# Platform ZEC address to receive 0.5% spread fee from each transaction
+# This is REQUIRED for the platform to receive its fee portion
+PLATFORM_ZEC_ADDRESS=
+
 # ============================================================================
 # NEAR Environment (Ref Finance / indexer)
 # ============================================================================
