chore: Earn cleanup

--- a/backend-zapp/.env.example
+++ b/backend-zapp/.env.example
@@ -1,63 +1,32 @@
 # Example environment configuration for zapp-backend
 
 # MongoDB connection string
-MONGODB_URI=mongodb://localhost:00000
+MONGODB_URI=mongodb://localhost:xxxxxxx
 
 # Admin API key used by the Zapp admin dashboard
-ZAP_ADMIN_API_KEY=changeme-admin-key
+ZAP_ADMIN_API_KEY=your-custom-key
 
 # Secret used for signing facilitator JWTs (keep this safe in production)
-MERCHANT_JWT_SECRET=changeme-facilitator-secret
+MERCHANT_JWT_SECRET=your-custom-secret
 
-# Fiat price for 1 ZEC (e.g. 50 means 1 ZEC = 50 units of fiat)
+# Fiat price for 1 ZEC (e.g. 50 means 1 ZEC = 500 units of fiat)
 # In production you should back this with a proper price oracle.
-ZEC_FIAT_RATE=50
+ZEC_FIAT_RATE=500
 
-# Platform ZEC address to receive 0.5% spread fee from each transaction
-# This is REQUIRED for the platform to receive its fee portion
-PLATFORM_ZEC_ADDRESS=
+NEAR_ENV=testnet #mainet
 
-# ============================================================================
-# NEAR Environment (Ref Finance / indexer)
-# ============================================================================
+PORT=4001
+
+PLATFORM_ZEC_ADDRESS=tmPWTCpR4YvhGVogsCxoMjwfo1m93knymbx
 
 # Network (testnet or mainnet)
 NEAR_ENV=testnet
 
-# ============================================================================
-# Zcash Node RPC Connection
-# Connects directly to your Zcash node - no external API key needed!
-# ============================================================================
+# Zcash API key (required for transaction verification)
+ZCASH_API_KEY=tautam-key
 
-# Zcash node RPC URL (default: http://127.0.0.1:8232)
-# For testnet, typically use port 18232
-ZCASH_RPC_URL=http://127.0.0.1:8232
+# Optional: Custom credentials path
+NEAR_CREDENTIALS_PATH=~/.near-credentials/testnet/
 
-# RPC authentication (if your node requires it)
-# These match the rpcuser/rpcpassword in your zcash.conf
-ZCASH_RPC_USER=
-ZCASH_RPC_PASSWORD=
-
-# ============================================================================
-# NEAR Configuration
-# ============================================================================
-
-# Optional: Custom credentials path (default: ~/.near-credentials)
-NEAR_CREDENTIALS_PATH=~/.near-credentials
-
-# NOTE: No BRIDGE_NEAR_ACCOUNT needed!
-# Each user gets their own NEAR account automatically generated from their Zcash address.
-# Accounts are created via `near-cli-rs` and funded via testnet faucet.
-# Install near-cli: npm install -g near-cli-rs@latest
-
-# ============================================================================
-# Omni Bridge SDK Configuration (for real Zcash<->NEAR bridging)
-# ============================================================================
-
-# REQUIRED for real bridging: Zcash API key (from Tatum or similar provider)
-# Without this, the system falls back to simulated bridging
-ZCASH_API_KEY=
-
-# Bridge mode: 'real' for actual bridging, 'simulated' for testing
-# Default: simulated (if ZCASH_API_KEY is not set)
-BRIDGE_MODE=real
+NEAR_RPC_URL_TESTNET=testnet-rpc-url
+NEAR_RPC_URL_MAINNET=mainnet-rpc-url
